# network-simulator

./: .gitignore  Cargo.toml  README.md  apchat.md  config.toml  examples.py  network_simulator.py  temp_config.toml  temp_config2.toml  temp_config3.toml  test_network_simulator.py
.github/workflows/: ci.yml
chats/: wip
docs/: build_and_run_instructions.md  configuration_schema.md  core_data_structures.md  testing_strategy.md
examples/: README.md  packet_hex.txt  packet_hex.txt_out.txt  run_simulation.rs
prompts/: reviewer.md
src/: config.rs  lib.rs  main.rs  processor.rs
tests/: cli_test.rs  config_invalid_injection_direction.rs  config_invalid_link_name_test.rs  config_topology_validation_test.rs  config_validation_test.rs  destination_detection_test.rs  destination_test.rs  dual_tun_host_integration_test.rs  end_to_end_test.rs  fabric_get_link_test.rs  fabric_get_router_mut_test.rs  fabric_get_router_test.rs  fabric_incident_links_test.rs  fabric_incident_links_with_links_test.rs  icmp_fragmentation_test.rs  icmp_routing_test.rs  icmpv6_test.rs  link_reference_validation_test.rs  multipath_forwarding_test.rs  multipath_test.rs  packet_file_absent_test.rs  packet_file_cli_test.rs  packet_file_comments_test.rs  packet_file_config_test.rs  packet_file_empty_test.rs  packet_file_malformed_test.rs  packet_file_missing_test.rs  packet_file_multipath_test.rs  packet_file_multiple_ingress_test.rs  packet_test.rs  raw_packet_preserved_test.rs  router_validation_test.rs  routing_compute_test.rs  simulation_test.rs  tun_mock_test.rs  tun_multiple_mock_test.rs
(+222 files in other folders)
