[package]
name = "network-simulator"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Rust‑based network fabric simulator with TUN interfaces"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
petgraph = "0.6"
regex = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# packet parsing library
pnet = "0.33"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
# TUN/TAP interface support
tun = "0.6"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.3"
